A try at fixing the problem with tooltips on iPhone Safari

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,3 +1,5 @@
+@supports (-webkit-overflow-scrolling: touch) { /* CSS specific to iOS devices */ body{ cursor:pointer; } }
+
 .red-tooltip {
     background-color: #ff363d;
     color: #000;
@@ -188,9 +190,11 @@ select#pace.form-control {
     border-left: 5px solid rgba(0, 0, 0, 0.5);
     border-right: 5px solid rgba(0, 0, 0, 0.5);
 }
+
 Resizer.disabled {
   cursor: not-allowed;
 }
+
 Resizer.disabled:hover {
   border-color: transparent;
 }
